fix(folder tabs): correct disabled state color in dark mode

--- a/core/src/components/tabs/folder-tabs/folder-tabs-vars.scss
+++ b/core/src/components/tabs/folder-tabs/folder-tabs-vars.scss
@@ -58,7 +58,7 @@
   --tds-folder-tab-background-selected-secondary: var(--tds-grey-868);
   --tds-folder-tab-divider-color: var(--tds-blue-100);
   --tds-folder-tab-item-color: rgb(228 233 241 / 60%);
-  --tds-folder-tab-item-color-disabled: rgb(228 233 241 / 60%);
+  --tds-folder-tab-item-color-disabled: rgb(228 233 241 / 16%);
 
   .tds-mode-variant-primary {
     --tds-folder-tab-background-selected: var(--tds-folder-tab-background-selected-primary);
